Add upload step

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,11 @@ jobs:
       uses: gradle/gradle-build-action@bc3340afc5e3cc44f2321809ac090d731c13c514
       with:
         arguments: packageDeb
+    - name: upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: Linux deb artifact
+        path: build/compose/binaries/deb
         
   buildDmg:
     runs-on: macos-latest
@@ -44,7 +49,12 @@ jobs:
       uses: gradle/gradle-build-action@bc3340afc5e3cc44f2321809ac090d731c13c514
       with:
         arguments: packageDmg
-                
+    - name: upload a rtifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: macOS dmg artifact
+        path: build/compose/binaries/dmg
+        
   buildExe:
     runs-on: windows-latest
 
@@ -59,4 +69,9 @@ jobs:
       uses: gradle/gradle-build-action@bc3340afc5e3cc44f2321809ac090d731c13c514
       with:
         arguments: packageExe
+    - name: upload a rtifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: Windows exe artifact
+        path: build/compose/binaries/exe
         
