--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,6 +25,7 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: assembleRelease
+        gradle-version: 7.4
 
     - name: 7z
       uses: DuckSoft/create-7z-action@v1.0
