--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,20 +24,20 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
-        arguments: tasks
+        arguments: assembleDist
         gradle-version: 7.4
 
-    # - name: 7z
-    #   uses: DuckSoft/create-7z-action@v1.0
-    #   with:
-    #     pathSource: ./build
-    #     pathTarget: ./release.7z
+    - name: 7z
+      uses: DuckSoft/create-7z-action@v1.0
+      with:
+        pathSource: ./build
+        pathTarget: ./release.7z
 
-    # - name: Upload binaries to release
-    #   uses: svenstaro/upload-release-action@v2
-    #   with:
-    #     repo_token: ${{ secrets.GITHUB_TOKEN }}
-    #     file: release.7z
-    #     asset_name: release.7z
-    #     tag: ${{ github.ref }}
-    #     overwrite: true
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: release.7z
+        asset_name: release.7z
+        tag: ${{ github.ref }}
+        overwrite: true
