--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,17 +30,8 @@ jobs:
         arguments: distZip
         gradle-version: 7.4
 
-    # - name: 7z
-    #   uses: DuckSoft/create-7z-action@v1.0
-    #   with:
-    #     pathSource: ./build/distributions/
-    #     pathTarget: ./release.7z
-
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
+    - name: upload artifact
+      uses: actions/upload-artifact@v2
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./build/distributions/tracks-1.0.0.zip
-        asset_name: tracks-1.0.0.zip
-        tag: ${{ github.ref }}
-        overwrite: true
+        name: distZip
+        path: build/distributions/**/*.zip
