improve print, bump to 1.2.2

--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+plugin.com.github.gmazzo.buildconfig=3.0.3
+
 plugin.com.github.johnrengelman.shadow=7.1.2
 
 plugin.org.jlleitschuh.gradle.ktlint-idea=10.2.1
