--- a/versions.properties
+++ b/versions.properties
@@ -7,34 +7,34 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-plugin.com.github.gmazzo.buildconfig=3.0.3
+plugin.com.github.gmazzo.buildconfig=3.1.0
 
 plugin.com.github.johnrengelman.shadow=7.1.2
 
-plugin.org.jlleitschuh.gradle.ktlint-idea=10.2.1
+plugin.org.jlleitschuh.gradle.ktlint-idea=10.3.0
 
-plugin.org.jlleitschuh.gradle.ktlint=10.2.1
+plugin.org.jlleitschuh.gradle.ktlint=10.3.0
 
 version.org.slf4j..slf4j-simple=1.7.36
 
-version.org.jetbrains.kotlinx..atomicfu=0.17.1
+version.org.jetbrains.kotlinx..atomicfu=0.18.3
 
 version.org.fusesource.jansi..jansi=2.4.0
 
- version.okio=3.0.0
+ version.okio=3.2.0
 
-version.net.bramp.ffmpeg..ffmpeg=0.6.2
+version.net.bramp.ffmpeg..ffmpeg=0.7.0
 
-version.moe.sdl.yabapi..yabapi-core-jvm=0.10.0
+version.moe.sdl.yabapi..yabapi-core-jvm=0.11.0-SNAPSHOT
 
- version.ktor=1.6.7
+ version.ktor=1.6.8
 
-version.kotlinx.serialization=1.3.2
+version.kotlinx.serialization=1.3.3
 
-version.kotlinx.datetime=0.3.2
+version.kotlinx.datetime=0.4.0
 
-version.kotlinx.coroutines=1.6.0
+version.kotlinx.coroutines=1.6.4
 
-version.kotlin=1.6.10
+version.kotlin=1.7.10
 
-version.com.github.ajalt.clikt..clikt=3.4.0
+version.com.github.ajalt.clikt..clikt=3.5.0
