--- a/versions.properties
+++ b/versions.properties
@@ -15,6 +15,8 @@ plugin.org.jlleitschuh.gradle.ktlint-idea=10.3.0
 
 plugin.org.jlleitschuh.gradle.ktlint=10.3.0
 
+version.io.github.g0dkar..qrcode-kotlin-jvm=3.1.0
+
 version.me.tongfei..progressbar=0.9.3
 
 version.org.slf4j..slf4j-simple=1.7.36
