feat: use system specified path

--- a/versions.properties
+++ b/versions.properties
@@ -15,11 +15,15 @@ plugin.org.jlleitschuh.gradle.ktlint-idea=10.3.0
 
 plugin.org.jlleitschuh.gradle.ktlint=10.3.0
 
+version.com.pinterest..ktlint=0.42.1
+
+version.dev.dirs..directories=26
+
 version.io.github.g0dkar..qrcode-kotlin-jvm=3.2.0
 
 version.me.tongfei..progressbar=0.9.4
 
-version.org.slf4j..slf4j-simple=1.7.3
+version.org.slf4j..slf4j-simple=1.7.36
 
 version.org.jetbrains.kotlinx..atomicfu=0.18.3
 
