--- a/versions.properties
+++ b/versions.properties
@@ -33,9 +33,9 @@ version.org.fusesource.jansi..jansi=2.4.0
 
 version.net.bramp.ffmpeg..ffmpeg=0.7.0
 
-version.moe.sdl.yabapi..yabapi-core-jvm=0.11.0-SNAPSHOT
+version.moe.sdl.yabapi..yabapi-core-jvm=0.11.0-ktor2-SNAPSHOT
 
- version.ktor=1.6.8
+ version.ktor=2.1.2
 
 version.kotlinx.serialization=1.4.0
 
