feat: support int64 mid

--- a/versions.properties
+++ b/versions.properties
@@ -33,7 +33,7 @@ version.org.fusesource.jansi..jansi=2.4.0
 
 version.net.bramp.ffmpeg..ffmpeg=0.7.0
 
-version.moe.sdl.yabapi..yabapi-core-jvm=0.11.0-ktor2-SNAPSHOT
+version.moe.sdl.yabapi..yabapi-core-jvm=0.11.0
 
  version.ktor=2.1.2
 
